Fixed Downloaded Resume Spacing

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@
     flex-grow: 1;
     width: 100%;
     border-radius: 10px;
+    padding: 20px 0px;
     background-color: #5f6269;
 }
 
@@ -48,13 +49,12 @@
   max-width: 820px; 
   max-height: 1056px;
   overflow: auto;
-  margin: 20px auto; 
+  margin: 0px auto; 
   padding: 10px; 
   padding-left: 30px;
   padding-right: 30px;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0,0,0,0.1); 
-  border: 1px solid #ccc;
 }
 
 .template-container {
